# assay

./: .dockerignore  .gitattributes  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  .typos.toml  404.html  :memory:  ADR-006-Project-Rename-to-Assay.docx  CHANGELOG.md  CI-CONTRACT.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  PR_DESCRIPTION.md  README.md  SECURITY.md  Verdict-v034-Adoption-Hardening.docx  Verdict-v03x-Execution-Plan.docx  Verdict-v040-Execution-Plan.docx  append_job.yml  assay.yaml  catalog-info.yaml  check_codes.sh  check_output_2.txt  check_tools.py  ci-eval.yaml  dataset.jsonl  debug_fail.sh  deny.toml  deny.yaml  deny_modern.yaml  eval.yaml  evidence.json  fs_policy.yaml  glama.json  handoff_v0.2.1.md  handoff_v2.3.md  (+33 more)
assay-python-sdk/: Cargo.toml  README.md  pyproject.toml
assay-python-sdk/python/: CHANGELOG.md  pyproject.toml
assay-python-sdk/python/assay/: __init__.py  __init__.pyi  _native.pyi  claim_support.py  client.pyi  doctor.py  pytest_plugin.pyi
assay-python-sdk/python/tests/: test_async.py  test_claim_support.py  test_context.py  test_determinism.py  test_edge_cases.py  test_implicit_context.py  test_redaction.py  test_streaming.py  test_typing_contract.py  test_wrappers.py
assay-python-sdk/src/: lib.rs
crates/assay-adapter-a2a/: Cargo.toml
crates/assay-adapter-a2a/src/: lib.rs
crates/assay-adapter-api/: Cargo.toml
crates/assay-adapter-api/src/: canonical.rs  lib.rs  shape.rs
crates/assay-adapter-ucp/: Cargo.toml
crates/assay-adapter-ucp/src/: lib.rs
crates/assay-canonical/: Cargo.toml  README.md
crates/assay-canonical/src/: digest.rs  jcs.rs  lib.rs  parse.rs  profile.rs  set_paths.rs
crates/assay-canonical/tests/: conformance.rs
crates/assay-cli/: Cargo.toml  evidence_demo_profile.yaml
crates/assay-cli/benches/: profile_store_harness.rs  suite_run_worstcase.rs
crates/assay-cli/packs/: default-policy.yaml  dev-policy.yaml  hardened-policy.yaml
crates/assay-cli/schemas/: coverage_report_v1.schema.json  soak_report_v1.schema.json
crates/assay-cli/src/: backend.rs  caps.rs  cgroup.rs  enforcement_health_v1.rs  env_filter.rs  exit_codes.rs  fs.rs  landlock_check.rs  landlock_net.rs  main.rs  metrics.rs  packs.rs  policy.rs  templates.rs
crates/assay-cli/tests/: contract_docs_generate_explain.rs  contract_exit_codes.rs  contract_generate_g1.rs  contract_init_ci.rs  contract_init_hello_trace.rs  contract_monitor_cli.rs  contract_run_ci_parity.rs  contract_soak_e1_1.rs  coverage_contract.rs  coverage_declared_tools_file.rs  coverage_format_md.rs  coverage_out_md.rs  coverage_routes_top.rs  coverage_threshold.rs  dev_encoding.rs  doctor_fix_e2e.rs  e2e_mcp_wrap_assert_cmd.rs  e2e_policy_test.rs  evidence_store_test.rs  evidence_test.rs  generate_golden.rs  golden_runner.rs  inode_gen.rs  kill_switch_assert_cmd.rs  lsm_deny_smoke.rs  mcp_command_grouping_test.rs  mcp_id_correlation_errors.rs  mcp_transport_import.rs  mcp_wrap_coverage.rs  mcp_wrap_state_window_out.rs  policy_command_grouping_test.rs  policy_edge_cases.rs  profile_integration_test.rs  profile_simulation.rs  project_otel_cli.rs  receipt_schema_registry_test.rs  run_json_render_safety.rs  strict_open.rs  tool_signing_test.rs  trust_basis_test.rs  (+1 more)
crates/assay-common/: Cargo.toml
crates/assay-common/src/: exports.rs  lib.rs
crates/assay-core/: Cargo.toml
crates/assay-core/.repro_artifacts/: sourceless_sarif.json
crates/assay-core/benches/: store_write_heavy.rs
crates/assay-core/examples/: debug_trace.rs
crates/assay-core/resources/: otel-collector-openclaw-check.yaml
crates/assay-core/src/: attachments.rs  attempts.rs  config.rs  coverage.rs  explain.rs  fingerprint.rs  incident.rs  lib.rs  model.rs  otel.rs  policy_engine.rs  quarantine.rs  redaction.rs  thresholds.rs
crates/assay-core/tests/: args_constraint_camel_gap.rs  assertions_smoke.rs  baseline_determinism.rs  baseline_test.rs  bombadil_no_raw_control_rendered.rs  compat_matrix.rs  contract_sarif.rs  decision_emit_invariant.rs  equivalence_test.rs  experimental.rs  fulfillment_normalization.rs  generate_fixture.rs  latency_check.rs  mandate_store_concurrency.rs  mcp_id_correlation.rs  mcp_import_smoke.rs  mcp_transport_compat.rs  order_determinism.rs  otel_contract.rs  otel_ingest_smoke.rs  otel_projection.rs  parity.rs  policy_engine_test.rs  policy_state_cache.rs  receipt_interop_probe.rs  render_safe_run_formatters.rs  render_safety_conformance.rs  replay_diff_contract.rs  runner_metric_spans.rs  storage_smoke.rs  store_consistency_e1.rs  tdt_otel_projection.rs  tool_decision_truth_vectors.rs  tool_taxonomy_policy_match.rs  trace_v2_upgrade.rs  vcr_record.rs
crates/assay-ebpf/: Cargo.toml
crates/assay-ebpf/src/: connect_events.rs  fork_events.rs  lsm.rs  main.rs  open_events.rs  path_filter.rs  socket_lsm.rs  vmlinux.rs  vmlinux_bindings.rs
crates/assay-evidence/: Cargo.toml  REVIEW-KIT.md
crates/assay-evidence/benches/: verify_lint_harness.rs
crates/assay-evidence/packs/: a2a-discovery-card-followup.yaml  cicd-starter.yaml  mandate-baseline.yaml  mcp-signal-followup.yaml  owasp-agentic-a3-a5-signal-followup.yaml  owasp-agentic-control-evidence-baseline.yaml  soc2-baseline.yaml
crates/assay-evidence/src/: attestation.rs  bundle.rs  coding_agent.rs  evaluation.rs  g3_authorization_context.rs  json_strict.rs  lib.rs  ndjson.rs  (+4 more)
crates/assay-mcp-server/: Cargo.toml
crates/assay-metrics/: Cargo.toml
crates/assay-monitor/: Cargo.toml
crates/assay-policy/: Cargo.toml
crates/assay-registry/: .wave0-probe  Cargo.toml  REVIEW-KIT-CANONICALIZE.md  REVIEW-PACK-CANONICALIZE.md
crates/assay-runner-core/: Cargo.toml
crates/assay-runner-linux/: Cargo.toml
crates/assay-runner-schema/: Cargo.toml
crates/assay-runner-spike/: Cargo.toml
crates/assay-sim/: Cargo.toml
crates/gateway-evidence-replay/: Cargo.toml  README.md
crates/verdict-cli/: Cargo.toml
crates/verdict-core/: Cargo.toml
example implementation pr-3.4.1/verdict-core/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: bundle_reader.rs  policy_yaml.rs
(+5235 files in other folders)
