[workspace]
resolver = "2"
members = [
  "crates/assay-core",
  "crates/assay-metrics",
  "crates/assay-cli", "crates/assay-mcp-server",
  "crates/assay-xtask", "crates/assay-monitor",
  "crates/assay-ebpf", "crates/assay-common",
  "assay-python-sdk", "crates/assay-policy",
]
default-members = [
  "crates/assay-core",
  "crates/assay-metrics",
  "crates/assay-cli",
  "crates/assay-mcp-server",
  "crates/assay-xtask",
  "crates/assay-monitor",
  "crates/assay-common",
  "assay-python-sdk",
]

[workspace.package]
version = "2.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Rul1an/assay"
authors = ["Assay"]
readme = "README.md"

[patch.crates-io]
assay-core = { path = "crates/assay-core" }
assay-metrics = { path = "crates/assay-metrics" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true

# eBPF MUST be optimized, even in dev profile
[profile.dev.package.assay-ebpf]
opt-level = 2
debug = false
codegen-units = 1

[profile.release.package.assay-ebpf]
opt-level = 3
debug = false
codegen-units = 1
