[workspace]
resolver = "2"
members = [
  "crates/assay-core",
  "crates/assay-metrics",
  "crates/assay-cli", "crates/assay-mcp-server",
  "crates/assay-xtask", "crates/assay-monitor",
  "crates/assay-ebpf", "crates/assay-common",
  "assay-python-sdk", "crates/assay-policy", "crates/assay-evidence", "crates/assay-sim",
  "crates/assay-registry",
]
default-members = [
  "crates/assay-core",
  "crates/assay-metrics",
  "crates/assay-cli",
  "crates/assay-mcp-server",
  "crates/assay-xtask",
  "crates/assay-monitor",
  "crates/assay-common",
  "assay-python-sdk",
]

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "allow"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_lifetimes = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
unwrap_used = "allow"
print_stdout = "allow"
missing_errors_doc = "allow"

[workspace.package]
version = "2.18.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Rul1an/assay"
authors = ["Assay"]
readme = "README.md"

[patch.crates-io]
assay-core = { path = "crates/assay-core" }
assay-metrics = { path = "crates/assay-metrics" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true

# eBPF MUST be optimized, even in dev profile
[profile.dev.package.assay-ebpf]
opt-level = 2
debug = false
codegen-units = 1

[profile.release.package.assay-ebpf]
opt-level = 3
debug = false
codegen-units = 1

[workspace.dependencies]
# Internal crates
assay-core = { path = "crates/assay-core", version = "2.16.0" }
assay-common = { path = "crates/assay-common", version = "2.16.0", default-features = false }
assay-monitor = { path = "crates/assay-monitor", version = "2.16.0" }
assay-metrics = { path = "crates/assay-metrics", version = "2.16.0" }
assay-policy = { path = "crates/assay-policy", version = "2.16.0" }
assay-mcp-server = { path = "crates/assay-mcp-server", version = "2.16.0" }
assay-evidence = { path = "crates/assay-evidence", version = "2.16.0" }
assay-sim = { path = "crates/assay-sim", version = "2.16.0" }
assay-registry = { path = "crates/assay-registry", version = "2.16.0" }

# Common dependencies
anyhow = "1"
thiserror = "2"
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false }
serde_yaml = "0.9"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
uuid = { version = "1.20", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"], default-features = false }
tempfile = "3"
regex = "1"
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
aya = "0.13.0"
aya-log = "0.2"
ratatui = "0.30"
crossterm = "0.29"
