[package]
name = "assay-it"
version.workspace = true
edition = "2021"

[lints]
workspace = true

[lib]
name = "assay"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
assay-core.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
serde_yaml.workspace = true
pythonize = "0.23.0"
