[package]
name = "assay-it"
version.workspace = true
edition = "2021"

[lints]
workspace = true

[lib]
name = "assay"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
assay-core.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
serde_yaml.workspace = true
pythonize = "0.24"
