[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "assay"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.entry-points.pytest11]
assay = "assay.pytest_plugin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "assay._native"
python-source = "python"
