[package]
name = "assay-canonical"
version.workspace = true
edition.workspace = true
description = "Deterministic canonicalization: RFC 8785 (JCS) bytes, sha256 content-addressed IDs, and schema-aware set-path normalization for semantic digests."
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
# Pinned EXACTLY to match assay-evidence: the JCS byte output feeds content/mandate IDs, so any
# serde_jcs change would move those digests. Keep this in lockstep with assay-evidence's pin.
serde_jcs = "=0.2.0"
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
