[package]
name = "assay-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "CLI for Assay"

[lints]
workspace = true

[[bin]]
name = "assay"
path = "src/main.rs"

[features]
experimental = ["assay-core/experimental"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
clap.workspace = true
tracing.workspace = true
env_logger = "0.11"
tokio.workspace = true

# Internal (Inherited from workspace)
assay-core.workspace = true
assay-monitor.workspace = true
assay-common = { workspace = true, features = ["std"] }
assay-policy.workspace = true
assay-metrics.workspace = true

dialoguer = "0.11"
similar = "2"
serde_yaml.workspace = true
chrono = { workspace = true, features = ["std", "clock"] }
dirs = "5.0"
sysinfo = "0.30"
humantime = "2"
tokio-stream = "0.1"
futures = "0.3"
globset = "0.4"
libc = "0.2"
nix = { version = "0.27", features = ["signal", "process", "fs", "ioctl"] }



[dev-dependencies]
tempfile = "3"
regex = "1"
assert_cmd = "2.1.1"
predicates = "3.1.3"
proptest = "1.4"
