[package]
name = "assay-common"
version = "2.0.0"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Common shared types and utilities for the Assay framework."

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
chrono = { version = "0.4", features = ["serde"], default-features = false, optional = true }

[features]
default = ["std"]
std = ["serde/std", "chrono/std", "dep:serde_json"]
