[package]
name = "assay-common"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Common shared types and utilities for the Assay framework."

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }
chrono = { version = "0.4", features = ["serde"], default-features = false, optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { git = "https://github.com/aya-rs/aya", tag = "aya-v0.13.0" }

[features]
default = ["std"]
std = ["serde/std", "chrono/std", "dep:serde_json"]
