[package]
name = "assay-common"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Common shared types and utilities for the Assay framework."

[lints]
workspace = true

[dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["fs", "ioctl"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["alloc"], optional = true }
chrono = { workspace = true, optional = true }

aya = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["serde/std", "chrono/std", "dep:serde_json", "dep:nix"]
user = ["std", "dep:aya"]
