[package]
name = "assay-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "High-performance evaluation framework for LLM agents (Core)"

[lints]
workspace = true

[features]
default = ["discovery", "kill-switch"]
experimental = []
discovery = ["dep:sysinfo", "dep:dirs"]
kill-switch = ["dep:nix", "dep:sysinfo"]
kill-switch-capture = ["kill-switch", "dep:procfs"]
bundled-sqlite = ["rusqlite/bundled"]
runtime-monitor = []

[dependencies]
assay-common = { workspace = true, features = ["std"] }
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
serde_jcs = "0.1"
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono = { workspace = true, features = ["std", "clock"] }
sha2.workspace = true
tokio = { workspace = true, features = ["sync", "time", "macros", "rt-multi-thread"] }

# Tool signing
ed25519-dalek = { version = "2.1", features = ["pkcs8", "pem", "rand_core"] }
rand = "0.8"
pkcs8 = { version = "0.10", features = ["pem"] }
spki = "0.7"
base64 = "0.22"
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls"] }
hex.workspace = true
md5 = "0.8.0"
strsim = "0.11.1"
serde_ignored = "0.1.14"
jsonschema = "0.19"
regex.workspace = true
tempfile.workspace = true
globset = "0.4"

# Discovery dependencies
sysinfo = { version = "0.30", optional = true }
dirs = { version = "5", optional = true }
nix = { version = "0.27", features = ["signal", "process"], optional = true }
schemars = "1.2.0"

# SQLite: use system lib on Linux, bundled on Windows/macOS/cross-compile
# Enable bundled-sqlite feature for cross-compilation or Windows
rusqlite = "0.31"

# Unix-specifics for Kill Switch P0
# nix moved to main dependencies to satisfy dep:nix feature
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["fs"] }
libc = "0.2"

# Linux-specifics for process inspection
[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.16", optional = true }

[dev-dependencies]
tempfile = "3.23.0"
serial_test = "3"
