[package]
name = "assay-ebpf"
version = "2.2.1"
edition = "2021"
publish = false

[features]
default = []
ebpf = []

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya", tag = "aya-v0.13.0" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", tag = "aya-v0.13.0" }
assay-common = { path = "../assay-common", default-features = false }

[[bin]]
name = "assay-ebpf"
path = "src/main.rs"
required-features = ["ebpf"]
