[package]
name = "assay-ebpf"
version.workspace = true
edition.workspace = true
publish = false

[lints]
workspace = true

[features]
default = []
ebpf = []

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya", tag = "aya-v0.13.0" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", tag = "aya-v0.13.0" }
assay-common.workspace = true

[[bin]]
name = "assay-ebpf"
path = "src/main.rs"
required-features = ["ebpf"]
