[package]
name = "assay-ebpf"
version.workspace = true
edition.workspace = true
publish = false

[lints.rust]
unsafe_code = "allow"
missing_docs = "allow"
rust_2018_idioms = { level = "warn", priority = -1 }
unused_lifetimes = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "allow", priority = -1 }
unwrap_used = "allow"
print_stdout = "allow"
missing_errors_doc = "allow"

[features]
default = []
ebpf = []

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya", tag = "aya-v0.13.1" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", tag = "aya-v0.13.0" }
assay-common.workspace = true

[[bin]]
name = "assay-ebpf"
path = "src/main.rs"
required-features = ["ebpf"]
