[package]
name = "assay-evidence"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true

[dependencies]
# Core serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_jcs = "0.1"

# Crypto & IDs
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
uuid = { version = "1.0", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"], default-features = false }

# Bundle formats
flate2 = "1.0"
tar = "0.4"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }


[dev-dependencies]
jsonschema = "0.17"
tempfile = "3"
assert_fs = "1.0"

[lints]
workspace = true
