[package]
name = "assay-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Metrics library for Assay"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde_json = { workspace = true, features = ["std"] }
assay-core.workspace = true
assay-common = { workspace = true, features = ["std"] }
regex.workspace = true
jsonschema = "0.19"
serde_yaml.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
