[package]
name = "assay-monitor"
version = "2.1.15"
edition = "2021"
description = "Userspace monitor for Assay eBPF programs"
license = "MIT"
repository = "https://github.com/Rul1an/assay"

[dependencies]
assay-common = { path = "../assay-common", version = "2.0.0", features = ["user"] }
assay-policy = { path = "../assay-policy", version = "2.0.0" }
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"

# Linux-only eBPF stack
[target.'cfg(target_os = "linux")'.dependencies]
aya = { git = "https://github.com/aya-rs/aya", tag = "aya-v0.13.0" }
aya-log = { git = "https://github.com/aya-rs/aya", tag = "aya-v0.13.0" }


