[package]
name = "assay-monitor"
version.workspace = true
edition.workspace = true
description = "Userspace monitor for Assay eBPF programs"
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
assay-common = { workspace = true }
assay-policy.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1"

# Linux-only eBPF stack
[target.'cfg(target_os = "linux")'.dependencies]
aya = { workspace = true }
aya-log = { workspace = true }
assay-common = { workspace = true, features = ["user"] }
