[package]
name = "assay-policy"
version = "2.0.0"
edition = "2021"
description = "Policy types and compilation logic for Assay"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ipnet = { version = "2.9", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
