[package]
name = "assay-policy"
version.workspace = true
edition.workspace = true
description = "Policy types and compilation logic for Assay"
license.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
serde_yaml.workspace = true
ipnet = { version = "2.9", features = ["serde"] }
thiserror.workspace = true
anyhow.workspace = true

[dev-dependencies]
