[package]
name = "assay-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Pack registry client for remote pack distribution (SPEC-Pack-Registry-v1)"

[lints]
workspace = true

[features]
default = []
# Enable OIDC token exchange for CI environments (Epic 6)
oidc = []

[dependencies]
# Core
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
serde_yaml.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "time", "fs"] }
async-trait.workspace = true
chrono = { workspace = true, features = ["std", "clock", "serde"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Crypto (for signature verification)
sha2 = "0.11"
hex = "0.4"
base64 = "0.22"
ed25519-dalek = { version = "3.0", features = ["alloc", "pkcs8", "rand_core"] }
pkcs8 = { version = "0.11", features = ["pem"] }

# Sigstore offline verification (MCP04a-3): X.509 path validation only, pinned trust roots, NO network.
# rustls-webpki is already in the tree (transitive); it does the chain validation so we never hand-roll
# it. Sigstore policy semantics (identity, Rekor) stay separate.
rustls-webpki = { version = "0.103", default-features = false, features = ["alloc", "std", "ring"] }
# The DER/UnixTime/SignatureVerificationAlgorithm types webpki's API speaks live in rustls-pki-types
# (webpki renames it to `pki_types` internally and does not re-export it). Pin the same version webpki uses.
rustls-pki-types = "1"
# MCP04a-3.2 identity extraction: DER parse of the Fulcio leaf SAN + issuer OID extension. der/spki/
# const-oid are already in the tree at the versions x509-cert 0.2 pins, so this adds no new crypto stack.
x509-cert = { version = "0.2", default-features = false, features = ["pem"] }
# MCP04a-3.2b raw ECDSA-over-bytes primitive: verify a P-256 signature under the leaf SPKI. p256/ecdsa
# are already in the tree at these versions (transitive). This is a sub-primitive only — NOT DSSE
# envelope / Sigstore bundle / Rekor verification.
p256 = { version = "0.13", features = ["ecdsa", "pkcs8"] }
ecdsa = { version = "0.16", features = ["der"] }

# Pack parsing (reuse from evidence)
serde_jcs = "=0.2.0"

# URL parsing
url = "2.5"

# Directories for cache
dirs = "6"

# Random for jitter (used in retry backoff)
rand = "0.8"

[dev-dependencies]
base64 = "0.22"
getrandom = { version = "0.4", features = ["sys_rng"] }
# Already a normal dependency; declared here too so integration tests can mutate Rekor v2 vectors cleanly.
serde_json = { workspace = true, features = ["std"] }
# Test-only synthetic PKI for the offline Sigstore cert-chain verifier (hermetic fixtures, no network).
rcgen = "0.14"
time = "0.3"
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
rand = "0.8"
serial_test = "3"
