[package]
name = "assay-runner-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Internal/experimental substrate for Assay measured-run workflows. Runner orchestration, archive assembly, and layer normalizers for the Assay-Runner candidate (Phase 2D Slice 2). No standalone product guarantee; API surface remains narrow and intentionally undocumented for third-party use; semver tracks the Assay workspace."
readme.workspace = true

[dependencies]
assay-common = { workspace = true, features = ["std"] }
assay-monitor = { workspace = true }
assay-runner-schema = { workspace = true }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { workspace = true, features = ["std"] }
regex = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
